--- a/after-login.html
+++ b/after-login.html
@@ -61,7 +61,7 @@
             </li>
           </ul>
         </div>
-        <button class="navbar-toggle menu-btn mr-5" data-toggle="collapse" data-target="#collapse_target">
+        <button class="navbar-toggle menu-btn mr-5" data-bs-toggle="collapse" data-bs-target="#collapse_target">
           <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
       </nav>
@@ -114,18 +114,18 @@
           <div class="button-hadiah">
             <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
               <li class="nav-item" role="presentation">
-                <button class="nav-link active px-5 py-3 m-3" id="hadiahsl-tab" data-toggle="tab" data-target="#hadiahsl" type="button" role="tab" aria-controls="hadiahsl" aria-selected="true"><img src="/img/medali-sl.svg" alt=""> Bionix Student Level</button>
+                <button class="nav-link active px-5 py-3 m-3" id="hadiahsl-tab" data-bs-toggle="tab" data-bs-target="#hadiahsl" type="button" role="tab" aria-controls="hadiahsl" aria-selected="true"><img src="/img/medali-sl.svg" alt=""> Bionix Student Level</button>
               </li>
               <li class="nav-item" role="presentation">
-                <button class="nav-link px-5 py-3 m-3" id="hadiahcl-tab" data-toggle="tab" data-target="#profile" type="button" role="tab" aria-controls="hadiahcl" aria-selected="false"><img src="/img/medali-cl.svg" alt=""> Bionix College Level</button>
+                <button class="nav-link px-5 py-3 m-3" id="hadiahcl-tab" data-bs-toggle="tab" data-bs-target="#hadiahcl" type="button" role="tab" aria-controls="hadiahcl" aria-selected="false"><img src="/img/medali-cl.svg" alt=""> Bionix College Level</button>
               </li>
             </ul>
           </div>
           <div class="tab-content">
             <div class="tab-pane fade show active" id="hadiahsl" role="tabpanel">
               <div class="container">
-                <div class="d-flex row ">
-                  <div class="d-flex col justify-content-end">
+                <div class="row">
+                  <div class="col justify-content-end">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 3</h4>
@@ -134,7 +134,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex col justify-content-center">
+                  <div class="col justify-content-center">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
@@ -143,7 +143,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex col justify-content-start">
+                  <div class="col justify-content-start">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 2</h4>
@@ -155,10 +155,10 @@
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade" id="profile" role="tabpanel">
+            <div class="tab-pane fade" id="hadiahcl" role="tabpanel">
               <div class="container">
-                <div class="d-flex row ">
-                  <div class="d-flex col justify-content-end">
+                <div class="row">
+                  <div class="col justify-content-end">
                     <div class="card juara3">
                       <div class="card-body">
                         <h4>Juara 3</h4>
@@ -167,7 +167,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex col justify-content-center">
+                  <div class="col justify-content-center">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
@@ -176,7 +176,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex col justify-content-start">
+                  <div class="col justify-content-start">
                     <div class="card juara2">
                       <div class="card-body">
                         <h4>Juara 2</h4>
@@ -248,10 +248,10 @@
         <footer class="footer">
           <div class="container" id="footer">
             <div class="row">
-              <div class="col-12 col-sm-6 text-center text-sm-left">
+              <div class="col-12 col-sm-6 text-sm-left">
                 <img src="/img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
               </div>
-              <div class="col-12 col-sm-6 text-center text-sm-right" id="footer-right">
+              <div class="col-12 col-sm-6 text-sm-end" id="footer-right">
                 <h1>Temukan Kami di Sosial Media!</h1>
                 <div class="listsocmed">
                   <a href="https://ise-its.com/" target="_blank" title="Website">
@@ -280,7 +280,7 @@
             </div>
             <hr>
             <div class="row">
-              <div class="col col-sm-2 text-center text-sm-left">
+              <div class="col col-sm-2 text-sm-left">
                 <ul>
                   <p><strong>Our Events</strong></p>
                   <li><a href="#">ISE!</a></li>
@@ -288,14 +288,14 @@
                   <li><a href="#">Merch</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-center text-sm-left">
+              <div class="col col-sm-3 text-sm-left">
                 <ul>
                   <p><strong>Bionix</strong></p>
                   <li><a href="#">Bionix Student Level</a></li>
                   <li><a href="#">Bionix College Level</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-center text-sm-left">
+              <div class="col col-sm-3 text-sm-left">
                 <ul>
                   <p><strong>ICON</strong></p>
                   <li><a href="#">ICON Academy</a></li>
@@ -304,7 +304,7 @@
                   <li><a href="#">Virtual Intern & Job Fair</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-center text-sm-left shop">
+              <div class="col col-sm-3 text-sm-left shop">
                 <ul>
                   <p><strong>SHOP</strong></p>
                   <li><a href="#">Merchandise<i class="fas fa-external-link-alt"></i></a></li>
@@ -324,7 +324,7 @@
   <!--Script-->
   <script src="js/jquery.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/countdown.js"></script>
   <script src="js/custom.js"></script>
 </body>
