--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         
         <!-- total hadiah section start -->
-        <div class="total-hadiah text-center">
+        <div class="total-hadiah text-center" id="total-hadiah-sl">
           <h2>Total Hadiah</h2>
           <div class="button-hadiah">
             <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
@@ -111,7 +111,7 @@
           <div class="tab-content">
             <div class="tab-pane fade show active" id="hadiahsl" role="tabpanel">
               <div class="container">
-                <div class="row ">
+                <div class="row">
                   <div class="col justify-content-end">
                     <div class="card">
                       <div class="card-body">
@@ -125,7 +125,7 @@
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
-                        <img src="/img/juara1-bionix-sl.svg" id="juara1"class ="img-fluid" alt="">
+                        <img src="/img/juara1-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Freepass SNMPTN<br>Sistem Informasi<br>ITS 2022<br><span>+ Rp 5.000.000<br>Sertifikat</span></p>
                       </div>
                     </div>
@@ -144,8 +144,8 @@
             </div>
             <div class="tab-pane fade" id="hadiahcl" role="tabpanel">
               <div class="container">
-                <div class="d-flex row ">
-                  <div class="d-flex col justify-content-end">
+                <div class="row ">
+                  <div class="col justify-content-end">
                     <div class="card juara3">
                       <div class="card-body">
                         <h4>Juara 3</h4>
@@ -158,7 +158,7 @@
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
-                        <img src="/img/juara1-bionix-sl.svg" id="juara1" class ="img-fluid" alt="">
+                        <img src="/img/juara1-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Rp 3.000.000<br><span>+ Sertifikat</span></p>
                       </div>
                     </div>
@@ -235,10 +235,10 @@
         <footer class="footer">
           <div class="container" id="footer">
             <div class="row">
-              <div class="col-12 col-sm-6 text-center text-sm-left">
+              <div class="col-12 col-sm-6 text-sm-left">
                 <img src="/img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
               </div>
-              <div class="col-12 col-sm-6 text-center text-sm-right" id="footer-right">
+              <div class="col-12 col-sm-6 text-sm-end" id="footer-right">
                 <h1>Temukan Kami di Sosial Media!</h1>
                 <div class="listsocmed">
                   <a href="https://ise-its.com/" target="_blank" title="Website">
@@ -267,7 +267,7 @@
             </div>
             <hr>
             <div class="row">
-              <div class="col col-sm-2 text-center text-sm-left">
+              <div class="col col-sm-2 text-sm-left">
                 <ul>
                   <p><strong>Our Events</strong></p>
                   <li><a href="#">ISE!</a></li>
@@ -275,14 +275,14 @@
                   <li><a href="#">Merch</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-center text-sm-left">
+              <div class="col col-sm-3 text-sm-left">
                 <ul>
                   <p><strong>Bionix</strong></p>
                   <li><a href="#">Bionix Student Level</a></li>
                   <li><a href="#">Bionix College Level</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-center text-sm-left">
+              <div class="col col-sm-3 text-sm-left">
                 <ul>
                   <p><strong>ICON</strong></p>
                   <li><a href="#">ICON Academy</a></li>
@@ -291,7 +291,7 @@
                   <li><a href="#">Virtual Intern & Job Fair</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-center text-sm-left shop">
+              <div class="col col-sm-3 text-left shop">
                 <ul>
                   <p><strong>SHOP</strong></p>
                   <li><a href="#">Merchandise<i class="fas fa-external-link-alt"></i></a></li>
