--- a/student-level.html
+++ b/student-level.html
@@ -100,7 +100,7 @@
       <header class="header">
         <div class="container">
           <div class="row">
-            <div class="col-3 text-right">
+            <div class="col-3 text-end">
               <img src="/img/medali-sl-putih.svg" class="img-fluid" alt="">
             </div>
             <div class="col-8 text-left">
