navbar-horizontal scroll

--- a/college-level.html
+++ b/college-level.html
@@ -68,31 +68,28 @@
 
   
   <nav class="navbar navbarsl navbar-custom fixed-top navbar-expand-lg container-fluid" id="navbar2">
-    <div class="collapse navbar-collapse w-100 order-3 dual-collapse2 list" id="collapse_target">
-      <ul class="border-0 nav navbar-nav nav-tabs ml-5">
-        <li class="nav-item">
-          <a class="nav-link" href="#tahapan">Tahapan</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#persyaratan">Persyaratan</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#fasilitas">Fasilitas</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#hadiah">Hadiah</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#timeline">Timeline</a>
-        </li>
-      </ul>
-      <a href="#" class="nav-link" id="daftar">Daftar</a>
-      <a href="#" class="nav-link" id="guidebook"><img src="/img/DownloadSimple.svg" alt=""> Guidebook</a>
-    </div>
-    <button class="navbar-toggle menu-btn mr-5" data-bs-toggle="collapse" data-bs-target="#collapse_target">
-      <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
-    </button>
-  </nav>
+
+    <ul class="nav ml-5">
+      <li class="nav-item">
+        <a class="nav-link" href="#tahapan">Tahapan</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#persyaratan">Persyaratan</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#fasilitas">Fasilitas</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#hadiah">Hadiah</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#timeline">Timeline</a>
+      </li>
+    </ul>
+    <a href="#" class="nav-link" id="daftar">Daftar</a>
+    <a href="#" class="nav-link" id="guidebook"><img src="/img/DownloadSimple.svg" alt=""> Guidebook</a>
+
+</nav>
 
 
 
