--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <footer class="footer">
           <div class="container" id="footer">
             <div class="row">
-              <div class="col-12 col-sm-6 text-sm-left">
+              <div class="col-12 col-sm-6 text-sm-start">
                 <img src="/img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
               </div>
               <div class="col-12 col-sm-6 text-sm-end" id="footer-right">
