--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
         <!-- kategori lomba section start -->
         <div class="kategori-lomba container-fluid text-center">
           <h1>Kategori Lomba</h1>
-          <div class="row">
-            <div class="col bionix-sl">
+          <div class="row justify-content-center">
+            <div class="col-md-6 col-12 bionix-sl">
               <h2>BIONIX Student Level</h2>
               <p>Olimpiade bisnis dan IT terbesar<br>di Indonesia untuk tingkat pelajar<br>SMA/SMK sederajat.</p>
               <a href="#" class="btn daftar">Daftar</a>
               <a href="#" class="btn selengkapnya">Selengkapnya</a>
             </div>
-            <div class="col bionix-cl">
+            <div class="col-md-6 col-12 bionix-cl">
               <h2>BIONIX College Level</h2>
               <p>Kompetisi studi kasus bisnis<br>nasional untuk tingkat mahasiswa<br>di Indonesia.</p>
               <a href="#" class="btn daftar">Daftar</a>
@@ -112,7 +112,7 @@
             <div class="tab-pane fade show active" id="hadiahsl" role="tabpanel">
               <div class="container">
                 <div class="row">
-                  <div class="col justify-content-end">
+                  <div class="col-md-4 col-12 justify-content-end">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 3</h4>
@@ -121,7 +121,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col justify-content-center">
+                  <div class="col-md-4 col-12 justify-content-center">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
@@ -130,7 +130,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col justify-content-start">
+                  <div class="col-md-4 col-12 justify-content-start">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 2</h4>
@@ -145,7 +145,7 @@
             <div class="tab-pane fade" id="hadiahcl" role="tabpanel">
               <div class="container">
                 <div class="row ">
-                  <div class="col justify-content-end">
+                  <div class="col-md-4 col-12 justify-content-end">
                     <div class="card juara3">
                       <div class="card-body">
                         <h4>Juara 3</h4>
@@ -154,7 +154,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col justify-content-center">
+                  <div class="col-md-4 col-12 justify-content-center">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
@@ -163,7 +163,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col justify-content-start">
+                  <div class="col-md-4 col-12 justify-content-start">
                     <div class="card juara2">
                       <div class="card-body">
                         <h4>Juara 2</h4>
@@ -235,10 +235,10 @@
         <footer class="footer">
           <div class="container" id="footer">
             <div class="row">
-              <div class="col-12 col-sm-6 text-sm-start">
+              <div class="col-12 col-sm-6 text-sm-start text-center">
                 <img src="/img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
               </div>
-              <div class="col-12 col-sm-6 text-sm-end" id="footer-right">
+              <div class="col-12 col-sm-6 text-sm-end text-center" id="footer-right">
                 <h1>Temukan Kami di Sosial Media!</h1>
                 <div class="listsocmed">
                   <a href="https://ise-its.com/" target="_blank" title="Website">
@@ -267,7 +267,7 @@
             </div>
             <hr>
             <div class="row">
-              <div class="col col-sm-2 text-sm-left">
+              <div class="col col-sm-2 text-sm-start text-center">
                 <ul>
                   <p><strong>Our Events</strong></p>
                   <li><a href="#">ISE!</a></li>
@@ -275,14 +275,14 @@
                   <li><a href="#">Merch</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-left">
+              <div class="col col-sm-3 text-sm-start text-center">
                 <ul>
                   <p><strong>Bionix</strong></p>
                   <li><a href="#">Bionix Student Level</a></li>
                   <li><a href="#">Bionix College Level</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-left">
+              <div class="col col-sm-3 text-sm-start text-center">
                 <ul>
                   <p><strong>ICON</strong></p>
                   <li><a href="#">ICON Academy</a></li>
@@ -291,7 +291,7 @@
                   <li><a href="#">Virtual Intern & Job Fair</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-left shop">
+              <div class="col col-sm-3 text-sm-start text-center shop">
                 <ul>
                   <p><strong>SHOP</strong></p>
                   <li><a href="#">Merchandise<i class="fas fa-external-link-alt"></i></a></li>
