after-login done

--- a/after-login.html
+++ b/after-login.html
@@ -125,7 +125,7 @@
             <div class="tab-pane fade show active" id="hadiahsl" role="tabpanel">
               <div class="container">
                 <div class="row">
-                  <div class="col justify-content-end">
+                  <div class="col-md-4 col-12 justify-content-end">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 3</h4>
@@ -134,7 +134,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col justify-content-center">
+                  <div class="col-md-4 col-12 justify-content-center">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
@@ -143,7 +143,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col justify-content-start">
+                  <div class="col-md-4 col-12 justify-content-start">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 2</h4>
@@ -158,7 +158,7 @@
             <div class="tab-pane fade" id="hadiahcl" role="tabpanel">
               <div class="container">
                 <div class="row">
-                  <div class="col justify-content-end">
+                  <div class="col-md-4 col-12 justify-content-end">
                     <div class="card juara3">
                       <div class="card-body">
                         <h4>Juara 3</h4>
@@ -167,7 +167,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col justify-content-center">
+                  <div class="col-md-4 col-12 justify-content-center">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
@@ -176,7 +176,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col justify-content-start">
+                  <div class="col-md-4 col-12 justify-content-start">
                     <div class="card juara2">
                       <div class="card-body">
                         <h4>Juara 2</h4>
@@ -248,10 +248,10 @@
         <footer class="footer">
           <div class="container" id="footer">
             <div class="row">
-              <div class="col-12 col-sm-6 text-sm-left">
+              <div class="col-12 col-sm-6 text-sm-left text-center">
                 <img src="/img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
               </div>
-              <div class="col-12 col-sm-6 text-sm-end" id="footer-right">
+              <div class="col-12 col-sm-6 text-sm-end text-center" id="footer-right">
                 <h1>Temukan Kami di Sosial Media!</h1>
                 <div class="listsocmed">
                   <a href="https://ise-its.com/" target="_blank" title="Website">
@@ -280,7 +280,7 @@
             </div>
             <hr>
             <div class="row">
-              <div class="col col-sm-2 text-sm-left">
+              <div class="col col-sm-2 text-sm-start text-center">
                 <ul>
                   <p><strong>Our Events</strong></p>
                   <li><a href="#">ISE!</a></li>
@@ -288,14 +288,14 @@
                   <li><a href="#">Merch</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-left">
+              <div class="col col-sm-3 text-sm-start text-center">
                 <ul>
                   <p><strong>Bionix</strong></p>
                   <li><a href="#">Bionix Student Level</a></li>
                   <li><a href="#">Bionix College Level</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-left">
+              <div class="col col-sm-3 text-sm-start text-center">
                 <ul>
                   <p><strong>ICON</strong></p>
                   <li><a href="#">ICON Academy</a></li>
@@ -304,7 +304,7 @@
                   <li><a href="#">Virtual Intern & Job Fair</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-left shop">
+              <div class="col col-sm-3 text-sm-start text-center shop">
                 <ul>
                   <p><strong>SHOP</strong></p>
                   <li><a href="#">Merchandise<i class="fas fa-external-link-alt"></i></a></li>
