--- a/student-level.html
+++ b/student-level.html
@@ -542,7 +542,7 @@
             </div>
             <hr>
             <div class="row">
-              <div class="col col-sm-2 text-sm-start">
+              <div class="col col-sm-2 text-sm-start text-center">
                 <ul>
                   <p><strong>Our Events</strong></p>
                   <li><a href="#">ISE!</a></li>
@@ -550,14 +550,14 @@
                   <li><a href="#">Merch</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-start">
+              <div class="col col-sm-3 text-sm-start text-center">
                 <ul>
                   <p><strong>Bionix</strong></p>
                   <li><a href="#">Bionix Student Level</a></li>
                   <li><a href="#">Bionix College Level</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-start">
+              <div class="col col-sm-3 text-sm-start text-center">
                 <ul>
                   <p><strong>ICON</strong></p>
                   <li><a href="#">ICON Academy</a></li>
@@ -566,7 +566,7 @@
                   <li><a href="#">Virtual Intern & Job Fair</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-start shop">
+              <div class="col col-sm-3 text-sm-start text-center shop">
                 <ul>
                   <p><strong>SHOP</strong></p>
                   <li><a href="#">Merchandise<i class="fas fa-external-link-alt"></i></a></li>
