--- a/college-level.html
+++ b/college-level.html
@@ -418,7 +418,7 @@
             </div>
             <hr>
             <div class="row">
-              <div class="col col-sm-2 text-sm-left">
+              <div class="col col-sm-2 text-sm-left text-center">
                 <ul>
                   <p><strong>Our Events</strong></p>
                   <li><a href="#">ISE!</a></li>
@@ -426,14 +426,14 @@
                   <li><a href="#">Merch</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-left">
+              <div class="col col-sm-3 text-sm-left text-center">
                 <ul>
                   <p><strong>Bionix</strong></p>
                   <li><a href="#">Bionix Student Level</a></li>
                   <li><a href="#">Bionix College Level</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-left">
+              <div class="col col-sm-3 text-sm-left text-center">
                 <ul>
                   <p><strong>ICON</strong></p>
                   <li><a href="#">ICON Academy</a></li>
@@ -442,7 +442,7 @@
                   <li><a href="#">Virtual Intern & Job Fair</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-3 text-sm-left shop">
+              <div class="col col-sm-3 text-sm-left text-center shop">
                 <ul>
                   <p><strong>SHOP</strong></p>
                   <li><a href="#">Merchandise<i class="fas fa-external-link-alt"></i></a></li>
