--- a/student-level.html
+++ b/student-level.html
@@ -37,7 +37,7 @@
   
   <!--navbar section-->
 
-      <nav class="navbar navbarsl navbar-custom sticky-top navbar-expand-lg container-fluid">
+      <nav class="navbar navbarsl navbar-custom fixed-top navbar-expand-lg container-fluid">
         <div class="logo text-left">
           <a class="navbar-brand" href="index.html"><img src="img/logo-ise-2021.svg" alt="logo ISE! 2021" /></a>
         </div>
