--- a/college-level.html
+++ b/college-level.html
@@ -194,7 +194,8 @@
                             <h2 class="h5 mb-0">Semifinal</h2>
                             <p class="text-small mt-2 font-weight-light"> Peserta membuat implementasi bisnis dan teknologi informasi dari studi kasus perusahaan yang telah diberikan dan menuangkannya dalam bentuk paper dan video.</p>
                         </li>
-                        <li class="timeline-ite             <h2 class="h5 mb-0">Final</h2>
+                        <li class="timeline-item rounded ml-3 p-4 shadow">
+                            <h2 class="h5 mb-0">Final</h2>
                             <p class="text-small mt-2 font-weight-light">Peserta akan mempresentasikan penyelesaian studi kasus bisnis yang telah dibuat sebelumnya di hadapan juri yang kompeten di bidang bisnis dan teknologi informasi.</p>
                         </li>
                     </ul><!-- End -->
