--- a/after-login.html
+++ b/after-login.html
@@ -248,7 +248,7 @@
         <footer class="footer">
           <div class="container" id="footer">
             <div class="row">
-              <div class="col-12 col-sm-6 text-sm-left text-center">
+              <div class="col-12 col-sm-6 text-sm-start text-center">
                 <img src="/img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
               </div>
               <div class="col-12 col-sm-6 text-sm-end text-center" id="footer-right">
